--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,12 +1,5 @@
 @import 'variables';
 
-h1 {
-    color: $red--color;
-    font-size: 16px;
-    background-color: $background-color;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-h2 {
-    color: blue;
+.card__courses-item {
+    margin-top: 1em;
 }
